--- a/package.json
+++ b/package.json
@@ -52,15 +52,15 @@
     "pushover-notifications": "^1.2.2"
   },
   "devDependencies": {
-    "@types/node": "^14.17.1",
-    "@typescript-eslint/eslint-plugin": "^4.25.0",
-    "@typescript-eslint/parser": "^4.25.0",
-    "eslint": "^7.27.0",
+    "@types/node": "^14.17.3",
+    "@types/node-schedule": "^1.3.1",
+    "@typescript-eslint/eslint-plugin": "^4.27.0",
+    "@typescript-eslint/parser": "^4.27.0",
+    "eslint": "^7.29.0",
     "homebridge": "^1.3.4",
     "nodemon": "^2.0.7",
     "rimraf": "^3.0.2",
     "ts-node": "^9.1.1",
-    "typescript": "^4.3.2",
-    "@types/node-schedule": "^1.3.1"
+    "typescript": "^4.3.4"
   }
 }
